# Distributed-Serialization-Formats

./: CMakeLists.txt  README.md
schemas/protobuf/: file_storage.proto
src/: main.cpp
src/common/: benchmark_runner.cpp  benchmark_runner.h  data_structures.h  serializer_interface.h  test_data_generator.cpp  test_data_generator.h  utilities.cpp  utilities.h
src/formats/json/: json_serializer.cpp  json_serializer.h
src/formats/msgpack/: msgpack_serializer.cpp  msgpack_serializer.h
src/formats/protobuf/: protobuf_serializer.cpp  protobuf_serializer.h
src/formats/xml/: xml_serializer.cpp  xml_serializer.h
src/tests/: benchmark_runner_test.cpp  json_serializer_test.cpp  msgpack_serializer_test.cpp  protobuf_serializer_test.cpp  test_data_generator_test.cpp  xml_serializer_test.cpp
